--- a/radar chart.html
+++ b/radar chart.html
@@ -8,12 +8,12 @@
     <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="radar-chart.css">
-    <link rel="stylesheet" href="webpage.css">
+    <link rel="stylesheet" href="css/radar-chart.css">
+    <link rel="stylesheet" href="css/webpage.css">
     <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="radar-chart.js"></script>
+    <script src="js/radar-chart.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="csv.js"></script>
+    <script src="js/csv.js"></script>
 </head>
 <body>
 <div><h1 id="heading"><center>US OPEN PLAYER PERFORMANCE ANALYSIS</center></h1></div>
